--- a/src/_html/_base/_layouts/_default.html
+++ b/src/_html/_base/_layouts/_default.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <meta name="description" content="{{ meta_description }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
 </head>
 <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
-    <div class="page-wrapper" id="pageWrapper">
         {% include "_html/_base/_includes/_header.html" %}
-        {% include "_html/_base/_includes/_banner.html" %}
-
-        {% block content %}{% endblock %}
-
-        {% include "_html/_base/_includes/_footer.html" %}
-    </div>
+        
 
 
+
+
+        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="assets/js/app.min.js"></script>
 </body>
 </html>
