--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -1,3 +1,16 @@
-<header>
-    
+<header class="container-fluid">
+    <div class="container">
+        <img class="logo" src="../../../assets/img/logo.png" alt="logo">
+        <nav>
+            <ul type="none">
+                <li>services</li>
+                <li>about us</li>
+                <li>how works</li>
+            </ul>
+            <img class="phone" src="../../../assets/img/phone.png" alt="phone">
+            <div class="signIn">sign in</div>
+            <div class="order">order</div>
+            <img src="../../../assets/img/burger.png" alt="burger" class="burger">
+        </nav>
+    </div>
 </header>
