--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid">
     <div class="container">
-        <img class="logo" src="../../../assets/img/logo.png" alt="logo">
+        <a href="#"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
         <nav>
             <ul type="none">
                 <li>services</li>
