--- a/src/_html/_base/_layouts/_default.html
+++ b/src/_html/_base/_layouts/_default.html
@@ -10,6 +10,7 @@
 </head>
 <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
         {% include "_html/_base/_includes/_header.html" %}
+        {% include "_html/_base/_includes/_blockGirl.html" %}
         
 
 
