--- a/src/assets/css/_components/_blockGirl.scss
+++ b/src/assets/css/_components/_blockGirl.scss
@@ -62,6 +62,24 @@
     font-weight: 400;
     font-family: "Poppins";
     padding: 10px;
+    position: relative;
+}
+.blue-line input {
+    height: 40px;
+    font-size: 13px;
+    border-radius: 2px;
+    border: none;
+    color: #656a70;
+    font-weight: 400;
+    font-family: "Poppins";
+    padding: 10px;
+    background: #ffffff url(../../../assets/img/free-icon-down-chevron-10728680.png) no-repeat right 10px center;
+    background-size: 12px 8px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.blue-line input:nth-child(4){
+    background: #ffffff
 }
 .blue-line label{
     display: block;
