--- a/src/_html/_base/_layouts/_default.html
+++ b/src/_html/_base/_layouts/_default.html
@@ -12,6 +12,8 @@
         {% include "_html/_base/_includes/_header.html" %}
         {% include "_html/_base/_includes/_blockGirl.html" %}
         {% include "_html/_base/_includes/_welcome.html" %}
+        {% include "_html/_base/_includes/_advantages.html" %}
+        {% include "_html/_base/_includes/_howit.html" %}
         
 
 
