--- a/src/assets/css/_components/_blockGirl.scss
+++ b/src/assets/css/_components/_blockGirl.scss
@@ -11,7 +11,7 @@
     letter-spacing: -1px;
     color: #03a9f4;
     font-weight: 900;
-    font-family: 'Poppins-Bold';
+    font-family: Poppins-Bold;
 }
 .blockGirl .main-text h1 span{
     color: #000;
