--- a/src/assets/css/_base/_fonts.scss
+++ b/src/assets/css/_base/_fonts.scss
@@ -1,62 +1,62 @@
 @font-face {
     font-family: 'museosans';
-    src: url(../../fonts/museosans-500.otf);
+    src: url(../../../assets/fonts/museosans-500.otf);
 }
 @font-face {
     font-family: 'OpenSans-Bold';
-    src: url(../../fonts/OpenSans-Bold.ttf);
+    src: url(../../../assets/fonts/OpenSans-Bold.ttf);
 }
 @font-face {
     font-family: 'OpenSans-BoldItalic';
-    src: url(../../fonts/OpenSans-BoldItalic.ttf);
+    src: url(../../../assets/fonts/OpenSans-BoldItalic.ttf);
 }
 @font-face {
     font-family: 'OpenSans-ExtraBold';
-    src: url(../../fonts/OpenSans-ExtraBold.ttf);
+    src: url(../../../assets/fonts/OpenSans-ExtraBold.ttf);
 }
 @font-face {
     font-family: 'OpenSans-BoldItalic';
-    src: url(../../fonts/OpenSans-ExtraBoldItalic.ttf);
+    src: url(../../../assets/fonts/OpenSans-BoldItalic.ttf);
 }
 @font-face {
     font-family: 'OpenSans-Italic';
-    src: url(../../fonts/OpenSans-Italic.ttf);
+    src: url(../../../assets/fonts/OpenSans-Italic.ttf);
 }
 @font-face {
     font-family: 'OpenSans-Light';
-    src: url(../../fonts/OpenSans-Light.ttf);
+    src: url(../../../assets/fonts/OpenSans-Italic.ttf);
 }
 @font-face {
     font-family: 'OpenSans-LightItalic';
-    src: url(../../fonts/OpenSans-LightItalic.ttf);
+    src: url(../../../assets/fonts/OpenSans-LightItalic.ttf);
 }
 @font-face {
     font-family: 'OpenSans-Regular';
-    src: url(../../fonts/OpenSans-Regular.ttf);
+    src: url(../../../assets/fonts/OpenSans-Regular.ttf);
 }
 @font-face {
     font-family: 'OpenSans-Semibold';
-    src: url(../../fonts/OpenSans-Semibold.ttf);
+    src: url(../../../assets/fonts/OpenSans-Semibold.ttf);
 }
 @font-face {
     font-family: 'OpenSans-SemiboldItalic';
-    src: url(../../fonts/OpenSans-SemiboldItalic.ttf);
+    src: url(../../../assets/fonts/OpenSans-SemiboldItalic.ttf);
 }
 @font-face {
-    font-family: 'Poppins-Bold';
-    src: url(../../fonts/Poppins-Bold.ttf);
+    font-family: Poppins-Bold;
+    src: url(../../../assets/fonts/Poppins-Bold.ttf);
 }
 @font-face {
     font-family: 'Poppins-Light';
-    src: url(../../fonts/Poppins-Light.ttf);
+    src: url(../../../assets/fonts/Poppins-Light.ttf);
 }
 @font-face {
     font-family: 'Poppins-Medium';
-    src: url(../../fonts/Poppins-Medium.ttf);
+    src: url(../../../assets/fonts/Poppins-Medium.ttf);
 }
 @font-face {
-    font-family: 'Poppins-Regular';
-    src: url(../../fonts/Poppins-Regular.ttf);
+    font-family: Poppins-Regular;
+    src: url(../../../assets/fonts/Poppins-Regular.ttf);
 }
 @font-face {
     font-family: 'Poppins-SemiBold';
