--- a/src/assets/css/_components/_advantages.scss
+++ b/src/assets/css/_components/_advantages.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     h6{
-        // font-size: $h6-font-size;
+        font-size: $h6-font-size;
         color: #ffffff;
         font-weight: 400;
         font-family: "Poppins";
@@ -74,4 +74,3 @@
 
 
 
-$h6-font-size: 16px;
