--- a/src/_html/_base/_includes/_discounts.html
+++ b/src/_html/_base/_includes/_discounts.html
@@ -2,17 +2,17 @@
     <div class="container">
         <h6>04  Discounts</h6>
         <h2>Our discount program</h2>
-        <p>By utilizing elements and principles of Material Design, we were <br> able to create a framework that incorporates</p>
+        <p class="text">By utilizing elements and principles of Material Design, we were <br> able to create a framework that incorporates</p>
         <div class="row discount-blocks">
             <div class="col-7 first-block">
                 <table>
                     <tr>
-                        <td><h4>4% OFF</h4><p>for more than <span>15 pages</span></p></td>
-                        <td><h4>4% OFF</h4><p>for more than <span>15 pages</span></p></td>
+                        <td><h4>4% <br> OFF</h4><p>for more than <br> <span>15 pages</span></p></td>
+                        <td><h4>5% <br> OFF</h4><p>for more than <br> <span>20 pages</span></p></td>
                     </tr>
                     <tr>
-                        <td><h4>4% OFF</h4><p>for more than <span>15 pages</span></p></td>
-                        <td><h4>4% OFF</h4><p>for more than <span>15 pages</span></p></td>
+                        <td><h4>10% <br> OFF</h4><p>for more than <br> <span>50 pages</span></p></td>
+                        <td><h4>15% <br> OFF</h4><p>for more than <br> <span>100 pages</span></p></td>
                     </tr>
                 </table>
             </div>
@@ -23,7 +23,7 @@
                     <div class="scissors-text">
                         <img class="stars" src="../../../assets/img/stars.png" alt="">
                         <p class="get">get</p>
-                        <p class="prozent">15 % <br> off</p>
+                        <p class="prozent">15 % off</p>
                         <p class="under">for your 1st order</p>
                     </div>
                     <img class="balloon" src="../../../assets/img/balloon.png" alt="">
