--- a/src/assets/css/_base/_fonts.scss
+++ b/src/assets/css/_base/_fonts.scss
@@ -43,7 +43,7 @@
     src: url(../../../assets/fonts/OpenSans-SemiboldItalic.ttf);
 }
 @font-face {
-    font-family: Poppins-Bold;
+    font-family: 'Poppins-Bold';
     src: url(../../../assets/fonts/Poppins-Bold.ttf);
 }
 @font-face {
@@ -55,7 +55,7 @@
     src: url(../../../assets/fonts/Poppins-Medium.ttf);
 }
 @font-face {
-    font-family: Poppins-Regular;
+    font-family: 'Poppins-Regular';
     src: url(../../../assets/fonts/Poppins-Regular.ttf);
 }
 @font-face {
