--- a/src/assets/css/_components/_discounts.scss
+++ b/src/assets/css/_components/_discounts.scss
@@ -1,42 +1,51 @@
 .discounts{
     background-color: $bg-color-blue;
     background-image: url(../../../assets/img/04-bg.png);
+    background-repeat: repeat-x;
+    background-position: center;
+    height: 600px;
+    position: relative;
     
     h6{
         font-size: $h6-font-size;
         color: #ffffff;
         font-weight: 400;
-        font-family: "Poppins";
+        font-family: "Poppins-Regular";
         text-align: center;
-        padding-top: 40px;
+        padding-top: 50px;
     }
     h2{
         font-size: $h2-font-size;
         color: #ffffff;
         font-weight: 500;
-        font-family: "Poppins";
+        font-family: "Poppins-Medium";
         text-align: center;
+        margin: 20px 0;
     }
-    p{
+    .text{
         font-size: 20px;
         line-height: 30px;
         color: #ffffff;
         font-weight: 500;
-        font-family: "Poppins";
+        font-family: "Poppins-Regular";
         text-align: center;
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
     }
     .discount-blocks{
-
+        width: 950px;
+        position: absolute;
+        top: 95%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         .first-block{
             background-color: #ffffff;
-            
-
+            padding: 40px;
             table{
                 text-align: center;
                 border-collapse: collapse;
                 border: none;
-                margin: 30px;
+                width: 100%;
+                height: 100%;
                   td {
                     border: 2px solid #e1e1e7;
                     text-align: center;
@@ -59,7 +68,7 @@
                     font-size: 35px;
                     line-height: 40px;
                     color: #f75e2e;
-                    font-family: "Poppins";
+                    font-family: 'Poppins-Bold';
                     text-align: center;
                 }
                 p{
@@ -67,14 +76,14 @@
                     line-height: 22px;
                     color: #51555a;
                     font-weight: 400;
-                    font-family: "Poppins";
+                    font-family: "Poppins-Regular";
                     text-align: center;
 
                     span{
                         font-size: 17px;
                         color: #0287c3;
                         font-weight: 600;
-                        font-family: "Poppins";
+                        font-family: "Poppins-Regular";
                         text-align: center;
                     }
                 }
@@ -86,7 +95,7 @@
             .dashed{
                 border-radius: 20px;
                 border: 3px dashed #0287c3;
-                padding: 40px;
+                padding: 30px;
                 position: relative;
                 h4{
                     font-size: 25px;
@@ -97,12 +106,12 @@
                     font-weight: 600;
                     font-family: "Poppins";
                     text-align: center;
-                    margin-bottom: 40px;
+                    margin-bottom: 30px;
                 }
                 .scissors{
                     position: absolute;
-                    top: 135px;
-                    left: 25px;
+                    top: 150px;
+                    left: 20px;
                 }
                 .scissors-text{
                     border: 3px dashed #ffffff;
@@ -111,7 +120,7 @@
                     
                     .stars{
                         position: absolute;
-                        top: 130px;
+                        top: 140px;
                         right: 30px;
                     }
 
@@ -123,7 +132,7 @@
                         font-weight: 500;
                         font-family: Poppins-Medium;
                         text-align: left;
-                        margin-left: 110px;
+                        margin-left: 50px;
                         margin-top: 20px;
                     }
                     .prozent{
@@ -133,7 +142,7 @@
                         font-family: Poppins-Bold;
                         text-align: center;
                         text-transform: uppercase;
-                        margin-top: -60px;
+                        margin-top: -10px;
                     }
                     .under{
                         font-size: 14px;
@@ -142,14 +151,14 @@
                         font-weight: 500;
                         font-family: Poppins-Regular;
                         text-align: center;
-                        margin-top: -40px;
-                        margin-bottom: 30px;
+                        margin-top: -10px;
+                        margin-bottom: 20px;
                     }
                 }
                 .balloon{
                     position: absolute;
                     bottom: -5px;
-                    right: -15px;
+                    right: -65px;
                 }
                 .out-text{
                     font-size: 18px;
@@ -160,8 +169,8 @@
                     font-style: italic;
                     font-family: OpenSans-Italic;
                     text-align: center;
-                    margin-top: 30px;
-                    margin-bottom: -10px;
+                    margin-top: 40px;
+                    margin-bottom: 10px;
                 }
             }
         }
