--- a/src/_html/_base/_layouts/_default.html
+++ b/src/_html/_base/_layouts/_default.html
@@ -15,6 +15,7 @@
         {% include "_html/_base/_includes/_advantages.html" %}
         {% include "_html/_base/_includes/_howit.html" %}
         {% include "_html/_base/_includes/_discounts.html" %}
+        {% include "_html/_base/_includes/_testimonials.html" %}
         
 
 
