--- a/src/assets/css/_components/_discounts.scss
+++ b/src/assets/css/_components/_discounts.scss
@@ -37,6 +37,7 @@
         top: 95%;
         left: 50%;
         transform: translate(-50%, -50%);
+        filter: drop-shadow(0px 4px 15px rgba(202,202,202,0.55));
         .first-block{
             background-color: #ffffff;
             padding: 40px;
