--- a/src/assets/css/_components/_header.scss
+++ b/src/assets/css/_components/_header.scss
@@ -23,7 +23,7 @@ nav ul li{
     text-transform: uppercase;
     color: #ffffff;
     font-weight: 600;
-    font-family: Poppins_Regular;
+    font-family: Poppins-Regular;
     cursor: pointer;
 }
 nav ul li::after{
