--- a/src/_html/_base/_includes/_blockGirl.html
+++ b/src/_html/_base/_includes/_blockGirl.html
@@ -20,18 +20,24 @@
         </div>
         <div class="blue-line">
             <div>
-                <label for="imput-name">Type of paper</label>
-                <input type="text" placeholder="Placeholder text" id="input-name">
+                <p>Type of paper</p>
+                <select>
+                    <option value="">Placeholder text</option>
+                </select>
             </div>
             <div>
-                <label for="imput-name">Writer level</label>
-                <input type="text" placeholder="High school" id="input-name">
+                <p>Writer level</p>
+                <select>
+                    <option value="">High school</option>
+                </select>
             </div>
-            <div class="">
-                <label for="imput-name">Urgency</label>
-                <input type="text" placeholder="21 days" id="input-name">
+            <div>
+                <p>Urgency </p>
+                <select>
+                    <option value="">21 days</option>
+                </select>
             </div>
-            <div class="input-container">
+            <div class="plus-minus">
                 <div
                     class="counter"
                     style="display: flex; align-items: center; border: 1px solid #ddd; border-radius: 5px; background-color: #f7f7f7; overflow: hidden; width: 120px; justify-content: space-between;"
