font-family, hover

--- a/src/assets/css/_base/_default.scss
+++ b/src/assets/css/_base/_default.scss
@@ -1,3 +1,8 @@
 $h6-font-size: 16px;
 $bg-color-blue: #03a9f3;
 $h2-font-size: 40px;
+$bg-btn1: #0187c3;
+$bg-btn1-hover: #a2d8ef;
+$bg-btn2: #f75e2d;
+$bg-btn2-hover: #f99d81;
+$p-color: #656a70;
