--- a/src/assets/css/_components/_advantages.scss
+++ b/src/assets/css/_components/_advantages.scss
@@ -9,7 +9,7 @@
         font-size: $h6-font-size;
         color: #ffffff;
         font-weight: 400;
-        font-family: "Poppins";
+        font-family: "Poppins-Regular";
         padding-top: 50px;
         text-align: center;
     }
@@ -17,7 +17,7 @@
         font-size: 33px;
         color: #ffffff;
         font-weight: 500;
-        font-family: "Poppins";
+        font-family: "Poppins-Bold";
         text-align: center;
         padding-top: 20px;
         padding-bottom: 50px;
@@ -39,18 +39,18 @@
         }
         h3{
             font-size: 30px;
-            color: #1e2021;
+            color: $p-color;
             font-weight: 500;
-            font-family: "Poppins";
+            font-family: "Poppins-Medium";
             text-align: center;
             padding: 30px 0;
         }
         p{
             font-size: 20px;
             line-height: 22px;
-            color: #51555a;
+            color: $p-color;
             font-weight: 400;
-            font-family: "Poppins";
+            font-family: "Poppins-Regular";
             text-align: center;
             padding-bottom: 20px;
         }
@@ -59,14 +59,17 @@
         width: 280px;
         height: 50px;
         border-radius: 3px;
-        background-color: #0187c3;
+        background-color: $bg-btn1;
         font-size: 14px;
         color: #ffffff;
         font-weight: 500;
-        font-family: "Poppins";
+        font-family: "Poppins-Regular";
         text-align: center;
         border: none;
         margin: 50px;
+        &:hover{
+            background-color: $bg-btn1-hover;
+        }
     }
 }
 
