--- a/src/assets/css/_components/_blockGirl.scss
+++ b/src/assets/css/_components/_blockGirl.scss
@@ -9,9 +9,9 @@
 .blockGirl .main-text h1{
     font-size: 47px;
     letter-spacing: -1px;
-    color: #03a9f4;
+    color: $bg-color-blue;
     font-weight: 900;
-    font-family: Poppins-Bold;
+    font-family: 'Poppins-Bold';
 }
 .blockGirl .main-text h1 span{
     color: #000;
@@ -22,34 +22,37 @@
     height: 2px;
 }
 .blockGirl .main-text .progress-bar{
-    background-color: #f75d2d;
+    background-color: $bg-btn2;
 }
 .main-text p{
     margin-top: 30px;
     font-size: 20px;
     line-height: 30px;
-    color: #656a70;
+    color: $p-color;
     font-weight: 400;
-    font-family: "Poppins_Regular";
+    font-family: "Poppins-Regular";
 }
 .blockGirl .main-text button{
     width: 220px;
     height: 50px;
     border-radius: 3px;
     border: none;
-    background-color: #f75d2d;
+    background-color: $bg-btn2;
     width: 178px;
     font-size: 14px;
     text-transform: uppercase;
     color: #ffffff;
     font-weight: 600;
-    font-family: "Poppins";
+    font-family: "Poppins-Regular";
     text-align: center;
+    &:hover{
+        background-color: $bg-btn2-hover;
+    }
 }
 .blockGirl .blue-line{
     height: 135px;
     filter: drop-shadow(0px 4px 15px rgba(202,202,202,0.15));
-    background-color: #03a9f3;
+    background-color: $bg-color-blue;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -70,7 +73,7 @@
         background-color: #f6f9f9;
         border: 1px solid #d8dadb;
         font-size: 13px;
-        color: #656a70;
+        color: $p-color;
         font-weight: 400;
         font-family: "Poppins-Regular";
         padding: 0 10px;
@@ -90,13 +93,16 @@
     width: 202px;
     height: 50px;
     border-radius: 3px;
-    background-color: #0187c3;
+    background-color: $bg-btn1;
     width: 178px;
     font-size: 14px;
     color: #ffffff;
     font-weight: 500;
-    font-family: "Poppins";
+    font-family: "Poppins-Regular";
     text-align: center;
     border: none;
     margin-top: 20px;
+    &:hover{
+        background-color: $bg-btn1-hover;
+    }
 }
