--- a/src/assets/css/_components/_discounts.scss
+++ b/src/assets/css/_components/_discounts.scss
@@ -18,7 +18,7 @@
         font-size: $h2-font-size;
         color: #ffffff;
         font-weight: 500;
-        font-family: "Poppins-Medium";
+        font-family: "Poppins-Bold";
         text-align: center;
         margin: 20px 0;
     }
@@ -29,7 +29,6 @@
         font-weight: 500;
         font-family: "Poppins-Regular";
         text-align: center;
-        // margin-bottom: 50px;
     }
     .discount-blocks{
         width: 950px;
