--- a/src/assets/css/_components/_header.scss
+++ b/src/assets/css/_components/_header.scss
@@ -15,33 +15,18 @@ nav ul{
     display: flex;
     margin-top: 30px;
 }
-nav ul li{
-    margin-right: 60px;
-    font-size: 12px;
+.nav-link{
+    font-size: 14px;
     letter-spacing: 0px;
     line-height: 16px;
     text-transform: uppercase;
     color: #ffffff;
     font-weight: 600;
-    font-family: 'Poppins-Regular';
-    cursor: pointer;
-    &:hover{
-        color: $bg-btn1;
-    }
+    font-family: "Poppins-Regular";
+    margin-right: 20px;
 }
-nav ul li::after{
-    content: '';
-    width: 0px;
-    height: 0px;
-    position: absolute;
-    margin-left: 10px;
-    margin-top: 5px;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid #fff;
-}
-nav ul li:nth-child(3):after{
-    border: none;
+.dropdown-menu{
+    background-color: $bg-btn1;
 }
 .phone{
     margin-top: 10px;
@@ -49,7 +34,15 @@ nav ul li:nth-child(3):after{
     cursor: pointer;
     &:hover{
         content: url(../../../assets/img/phone-hover.png);
+        animation: shake 0.5s ease-in-out;
     }
+}
+@keyframes shake {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(10deg); }
+    50% { transform: rotate(-10deg); }
+    75% { transform: rotate(10deg); }
+    100% { transform: rotate(0deg); }
 }
 .signIn{
     width: 100px;
@@ -94,4 +87,7 @@ nav ul li:nth-child(3):after{
 .burger{
     margin-top: 10px;
     cursor: pointer;
+    &:hover{
+        content: url(../../../assets/img/burger-hover.png);
+    }
 }
