--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid">
     <div class="container">
-        <a href="#"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
+        <a href="../../../index.html"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
         <nav>
             <ul type="none">
                 <li class="nav-item dropdown">
@@ -26,7 +26,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">How works</a>
+                    <a class="nav-link" href="../../../pages_howit.html">How it works</a>
                 </li>
             </ul>
             <img class="phone" src="../../../assets/img/phone.png" alt="phone">
