--- a/src/assets/css/_components/_blockGirl.scss
+++ b/src/assets/css/_components/_blockGirl.scss
@@ -1,6 +1,6 @@
 .blockGirl{
     background: #e6f7fe; 
-    background-image: url(../../../assets/img/img-cloud.png);
+    background-image: url(../../../assets/img/img-city.png);
     background-position: center bottom;
     background-repeat: repeat-x;
     padding-top: 100px;
