--- a/src/_html/_base/_layouts/_default_pages_howit.html
+++ b/src/_html/_base/_layouts/_default_pages_howit.html
@@ -6,11 +6,13 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ meta_description }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
 </head>
 <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
         {% include "_html/_base/_includes/_header.html" %}
         {% include "_html/_base/_includes/_city_header.html" %}
+        {% include "_html/_base/_includes/_pages_howit.html" %}
         
         
 
