page howit right column

--- a/src/_html/_base/_includes/_pages_howit.html
+++ b/src/_html/_base/_includes/_pages_howit.html
@@ -87,13 +87,88 @@
                 </div>
                 <h3>Archive</h3>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Jun 2016</li>
-                    <li class="list-group-item">May 2016</li>
-                    <li class="list-group-item">Apr 2016</li>
-                    <li class="list-group-item">Mar 2016</li>
+                    <li class="list-group-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">Jun 2016</li>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel1">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasRightLabel1"><p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p></h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <img src="../../../assets/img/group-people.avif" alt="">
+                        </div>
+                    </div>
+                    <li class="list-group-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight2">May 2016</li>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel2">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasRightLabel2"><p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p></h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <img src="../../../assets/img/people-nout.jpg" alt="">
+                        </div>
+                    </div>
+                    <li class="list-group-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight3" aria-controls="offcanvasRight3">Apr 2016</li>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight3" aria-labelledby="offcanvasRightLabel3">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasRightLabel3"><p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p></h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <img src="../../../assets/img/people-nout2.jpg" alt="">
+                        </div>
+                    </div>
                 </ul>
                 <h3>Latest Blogs</h3>
-                <img src="" alt="">
+                <img src="../../../assets/img/group-people.avif" alt="">
+                <h4>Standard gallery post</h4>
+                <p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
+                <hr>
+                <img src="../../../assets/img/people-nout.jpg" alt="">
+                <h4>Standard gallery post</h4>
+                <p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
+                <hr>
+                <img src="../../../assets/img/people-nout2.jpg" alt="">
+                <h4>Standard gallery post</h4>
+                <p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
+                <hr>
+                <h3>We accept</h3>
+                <hr>
+                <img src="../../../assets/img/card.png" alt="">
+                <div class="second-block">
+                    <div class="dashed">
+                        <h4>Limited time offer</h4>
+                        <img class="scissors" src="../../../assets/img/scissors.png" alt="">
+                        <p class="prozent">15<span>%</span>off</p>
+                        <p class="under">your first order</p>
+                    </div>
+                    <img class="raketa" src="../../../assets/img/raketa.png" alt="">
+                </div>
+                <h3>Our advantages</h3>
+                <hr>
+                <ul class="advantages-li" type="none">
+                    <li>Custom Writing on Any Subject</li>
+                    <li>English-speaking Writers</li>
+                    <li>Only Original Papers</li>
+                    <li>Affordable Prices</li>
+                    <li>Complete Confidentiality</li>
+                    <li>BA, MA and PhD Writers</li>
+                    <li>Up-to-date Sources Only</li>
+                    <li>Any Citation Style</li>
+                </ul>
+                <button class="under-button">Place an order</button>
+                <h3>Paper features</h3>
+                <hr>
+                <ul class="paper-li" type="none">
+                    <li>You choose font face</li>
+                    <li>12 point font size</li>
+                    <li>Double-spaced pages</li>
+                    <li>Over 300 words/page</li>
+                    <li>Text aligned left</li>
+                    <li>One-inch margins</li>
+                </ul>
+                <button class="under-button">Place an order</button>
+                <h3>Discounts</h3>
+                <hr>
             </div>
         </div>
     </div>
