--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -37,9 +37,9 @@
                   <img src="../../../assets/img/burger.png" alt="burger" class="burger">
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../pages_howit.html">How it works</a></button></li>
                   <li><button class="dropdown-item" type="button">Another action</button></li>
-                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                  <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../error.html">Error</a></button></li>
                 </ul>
               </div>
         </nav>
