--- a/src/_html/_base/_includes/_pages_howit.html
+++ b/src/_html/_base/_includes/_pages_howit.html
@@ -169,6 +169,44 @@
                 <button class="under-button">Place an order</button>
                 <h3>Discounts</h3>
                 <hr>
+                <div class="wavy-circle wavy-circle1">
+                    <div class="circle"></div>
+                    <span>15%<br>OFF</span>
+                </div>
+                <div class="wavy-text">
+                    <p class="for">for the</p>
+                    <h5>1st order</h5>
+                    <hr class="grey">
+                </div>
+                <div class="wavy-circle wavy-circle2">
+                    <div class="circle"></div>
+                    <span>5%<br>OFF</span>
+                </div>
+                <div class="wavy-text">
+                    <p class="for">for more than</p>
+                    <h5>20 pages</h5>
+                    <hr class="grey">
+                </div>
+                <div class="wavy-circle wavy-circle3">
+                    <div class="circle"></div>
+                    <span>10%<br>OFF</span>
+                </div>
+                <div class="wavy-text">
+                    <p class="for">for more than</p>
+                    <h5>50 pages</h5>
+                    <hr class="grey">
+                </div>
+                <div class="wavy-circle wavy-circle4">
+                    <div class="circle"></div>
+                    <span>15%<br>OFF</span>
+                </div>
+                <div class="wavy-text">
+                    <p class="for">for more than</p>
+                    <h5>100 pages</h5>
+                    <hr class="grey">
+                </div>
+                <button class="under-button">Place an order</button>
+                
             </div>
         </div>
     </div>
