--- a/src/_html/_base/_includes/_footer.html
+++ b/src/_html/_base/_includes/_footer.html
@@ -1,9 +1,9 @@
 <footer class="container-fluid">
     <div class="container">
-        <a href="#"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
+        <a href="../../../index.html"><img class="logo" src="../../../assets/img/logo.png" alt="logo"></a>
         <nav>
             <ul type="none">
-                <li>home</li>
+                <li><a href="../../../index.html">home</a></li>
                 <li>about us</li>
                 <li>order now</li>
                 <li>disclaimer</li>
