--- a/src/assets/css/_components/_pages_howit.scss
+++ b/src/assets/css/_components/_pages_howit.scss
@@ -186,7 +186,6 @@
         }
         .accordion-item{
             background-color: $bg-color-blue;
-            margin-bottom: -20px;
         }
         .accordion{
             border-top: 3px solid $bg-color-blue;
@@ -266,37 +265,13 @@
                     top: -20px;
                     left: -16px;
                     width: 50px;
-                    animation: moveScissors 10s infinite linear, cutEffect 0.5s infinite linear;
-                    @keyframes moveScissors {
-                        0% {
-                            top: -20px;
-                            left: -16px;
-                        }
-                        25% {
-                            top: -20px;
-                            left: 100%;
-                            transform: rotate(180deg);
-                        }
-                        50% {
-                            top: 100%;
-                            left: 100%;
-                        }
-                        75% {
-                            top: 100%;
-                            left: -16px;
-                        }
-                        100% {
-                            top: -20px;
-                            left: -16px;
-                        }
-                    }
-                    
+                    animation: cutEffect 0.5s infinite linear;                    
                     @keyframes cutEffect {
                         0%, 100% {
                             transform: rotate(0deg);
                         }
                         50% {
-                            transform: rotate(45deg);
+                            transform: rotate(30deg);
                         }
                     }
                 }
@@ -389,6 +364,86 @@
                     background: url(../../../assets/img/marker2.png) no-repeat center center;
                     background-size: contain;
                 }
+            }
+        }
+        .wavy-circle {
+            width: 130px;
+            height: 130px;
+            border-radius: 50%;
+            position: relative;
+            float: left;
+            margin-top: -20px;
+            span{
+                font-size: 36px;
+                letter-spacing: 0px;
+                line-height: 30px;
+                color: #ffffff;
+                font-family: "Poppins-Bold";
+                text-align: center;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+            .circle{
+                width: 145px;
+                height: 145px;
+                border-radius: 50%;
+                border: 15px dotted #fff;
+                position: absolute;
+                top: -7.5px;
+                left: -7.5px;
+                animation: rotateCircle 7s linear infinite;
+            @keyframes rotateCircle {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            } 
+            }
+        }
+        .wavy-circle1{
+            background-color: $bg-btn2;
+        }
+        .wavy-circle2, 
+        .wavy-circle3, 
+        .wavy-circle4{
+            background-color: $bg-btn1;
+            .circle{
+                span{
+                    color: #e2ff29;
+                }
+            }
+        }
+        .wavy-text{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding-left: 20px;
+            margin-top: 10px;
+            p{
+            font-size: 16px;
+            line-height: 25px;
+            color: $p-color;
+            font-weight: 500;
+            font-family: "Poppins-Medium";
+            }
+            h5{
+                font-size: 28px;
+                line-height: 25px;
+                color: #000;
+                font-weight: 500;
+                text-transform: uppercase;
+                font-family: "Poppins-Medium";
+            }
+            .grey{
+                margin-top: 50px;
+                width: 100%;
+                height: 1px;
+                background-color: $p-color;
             }
         }
     }
