--- a/src/_html/_base/_includes/_city_header-help.html
+++ b/src/_html/_base/_includes/_city_header-help.html
@@ -1,6 +1,6 @@
 <div class="container-fluid city_header">
     <div class="container menu">
-        <h2>How it works</h2>
+        <h2>Essay help</h2>
         <ul class="nav nav-pills">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../../../index.html">Home</a>
@@ -10,13 +10,13 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="../../../pages_howit.html">How it works</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="../../../help.html">Essay help</a></li>
+                <li><a class="dropdown-item" href="#">Essay help</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="../../../error.html">Error</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link actives" href="../../../pages_howit.html">How it works</a>
+              <a class="nav-link actives" href="../../../help.html">Essay help</a>
             </li>
           </ul>
     </div>
